--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,19 @@
 [tool.poetry]
 name = "py3repl"
-version = "0.1.1"
+version = "0.1.2"
 description = "A cli to mimic python REPL implementation"
-authors = ["amalshaji <amalshajid@gmail.com>"]
+authors = ["Amal Shaji <amalshajid@gmail.com>"]
+maintainers = ["Amal Shaji <amalshajid@gmail.com>"]
+license = "MIT"
+readme = "README.md"
+homepage = ""
+repository = "https://github.com/amalshaji/pyrepl/"
+keywords = [
+    "python3",
+    "repl",
+    "Packages",
+    "Pip"
+]
 
 [tool.poetry.dependencies]
 python = "^3.6"
